// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`_addTodo sets todo properly 1`] = `
[
  [
    "todos",
    [
      {
        "archived": false,
        "body": "some new todo here",
        "branch": "undefined#foobar",
        "checked": false,
        "commit": "somecommit",
        "gitUri": undefined,
        "id": "123457890",
        "origin": "/some/path.js:123",
        "path": "/some/path.js:123",
        "tags": [],
        "workspaceId": null,
      },
    ],
  ],
]
`;

exports[`_addTodo sets todo properly 2`] = `
[
  [
    {
      "todos": [
        {
          "archived": false,
          "body": "some new todo here",
          "branch": "undefined#foobar",
          "checked": false,
          "commit": "somecommit",
          "gitUri": undefined,
          "id": "123457890",
          "origin": "/some/path.js:123",
          "path": "/some/path.js:123",
          "tags": [],
          "workspaceId": null,
        },
      ],
    },
  ],
]
`;

exports[`generate proper default state and configuration 1`] = `
{
  "autoDetect": true,
  "hide": false,
  "showArchived": false,
  "showBranched": false,
  "todoFilter": "",
}
`;

exports[`generate proper default state and configuration 2`] = `
{
  "todos": [],
}
`;
